# unearthed-challenge-feel-the-rhythm

./: .gitignore  .unearthed_challenge.json  .unearthed_last_submission.json  README.md  UNEARTHED_README.md  error-35ca7945.txt  error-8b0f25b3.txt  predict.py  preprocess.py  preprocess_aditya.py  pyproject.toml  requirements.txt  score.py  train.py
incident-insights/: .unearthed_challenge.json  requirements.txt  setup.py  train.py
notebooks/: auxiliary_data.ipynb  eda.ipynb  exploratory_analysis.ipynb  exploratory_analysis_aditya.ipynb  exploratory_analysis_sharad.ipynb  unearthed_challenge_feel_the_rhythm.ipynb
