[tool.poetry]
name = "unearthed-challenge-feel-the-rhythm"
version = "0.1.0"
description = ""
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
unearthed-cli = "^0.1.7"
rich = "^10.6.0"
jupyterlab = "^3.1.1"
pandas = "1.1.2"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
